fix spacing between contents

--- a/static/CSS/styles.css
+++ b/static/CSS/styles.css
@@ -165,7 +165,7 @@ color: #EAF6F6;
     background-color: #303A52;
     margin: 10px auto 10px auto;
     border-radius: 15px;
-    padding: 25px 20px;
+    padding: 25px 20px 0;
 }
 
 
@@ -405,7 +405,7 @@ color: #000202;
         font-size: 2.7rem;
     }
     .skills {
-        height: 673px;
+        height: 600px;
     }
     .about-summary {
         width: auto;
@@ -417,7 +417,7 @@ color: #000202;
         margin-bottom: 150px;
     }
     .experiences{
-        padding: 20px 0 0 10px;
+        padding: 20px 0 30px 10px;
     }
 }
 
